# open-chat-relay

./: .dockerignore  .env.example  .env.production.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  health.py
apps/api/app/core/: config.py  logging.py  rate_limit.py  security.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  app.py  attachment.py  audit.py  auth_session.py  contact.py  event.py  message.py  notification.py  outbox.py  reaction.py  room.py  user.py  workspace.py
apps/api/app/realtime/: __init__.py  envelopes.py  manager.py  notifications.py  policies.py  presence_store.py  protocol.py  redis_bus.py  serializers.py  signal_bus.py  sse.py  typing_store.py
apps/api/app/schemas/: app.py  attachment.py  audit.py  auth.py  capabilities.py  conversation.py  friend.py  gateway.py  (+10 more)
apps/api/tests/: conftest.py  test_app_api_key.py  test_attachment.py  test_audit_log.py  test_auth.py  test_conversations.py  test_event_outbox.py  test_friends.py  test_global_conversations.py  test_health.py  test_incoming_webhook.py  test_internal_gateway.py  test_membership.py  test_message.py  test_notification.py  test_presence.py  test_presence_store.py  test_rate_limit.py  test_reaction.py  test_read_state.py  test_realtime.py  test_redis_bus.py  test_security_baseline.py  test_sse.py  test_system.py  test_typing_store.py  test_users.py  test_workspace_room.py
(+102 files in other folders)
