[project]
name = "open-chat-relay"
version = "0.1.0"
description = "Self-hosted adaptive realtime communication backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["apps/api"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["apps/api/app", "apps/api/tests"]

[tool.ruff.lint]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["apps/api/app", "apps/api/tests"]
venvPath = "."
venv = ".venv"
