[project]
name = "open-chat-relay-api"
version = "0.1.0"
description = "OpenChatRelay API service."
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.17.0",
  "argon2-cffi>=25.0.0",
  "asyncpg>=0.30.0",
  "boto3>=1.40.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "pyjwt>=2.10.0",
  "pydantic-settings>=2.10.0",
  "redis>=6.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
]

[tool.uv]
package = false
